This commit is to check and verify every part of the DNS points to the right direction between "oheeenrahman.com" and "www.oheenrahman.com"

--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
     <head>
         <meta charset="utf-8">
         <title>Oheen Rahman</title>
+        <favicon href=favicon.jpg></favicon>
     </head>
     <body>
         <h1>Oheen Rahman</h1>
         <p>Welcome to my personal webpage!</p>
+        <p>This is a simple HTML page.</p>
+        <p>I am using this part of the code to test if the DNS has resolved and pointing to github pages instead of Squarespace's DNS server and if HTTPS has a valid certificate.</p>
+        <video>
+            <source src="https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=RDdQw4w9WgXcQ&start_radio=1" type="video/mp4">
+        </video>
     </body>
-</html>
+</html
