--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <style href="style.css"></style>
         <title>Oheen Rahman</title>
         <favicon href=favicon.jpg></favicon>
     </head>
