--- a/index.html
+++ b/index.html
@@ -2,17 +2,15 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <style href="style.css"></style>
         <title>Oheen Rahman</title>
-        <favicon href=favicon.jpg></favicon>
+        <link rel="stylesheet" href="style.css">
+        <link rel="icon" href="favicon.jpg" type="image/jpeg">
     </head>
     <body>
         <h1>Oheen Rahman</h1>
         <p>Welcome to my personal webpage!</p>
         <p>This is a simple HTML page.</p>
-        <p>I am using this part of the code to test if the DNS has resolved and pointing to github pages instead of Squarespace's DNS server and if HTTPS has a valid certificate.</p>
-        <video>
-            <source src="https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=RDdQw4w9WgXcQ&start_radio=1" type="video/mp4">
-        </video>
+        <p>I am using Squarespace which hosts my domain and Cloudflare that handles the site's DNS requests, nameserver, proxies. I will at a later date transfer the domain fully to Cloudflare after the ICANN's 60 day restriction from when you first register the domain.</p>
+        <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ"></iframe>
     </body>
 </html>
