--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <h1>Oheen Rahman</h1>
         <p>Welcome to my personal webpage!</p>
         <p>This is a simple HTML page.</p>
+        <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="dark" data-type="HORIZONTAL" data-vanity="oheenrahman" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://www.linkedin.com/in/oheenrahman?trk=profile-badge">Oheen Rahman</a></div>
         <p>I am using Squarespace which hosts my domain and Cloudflare that handles the site's DNS requests, nameserver, proxies. I will at a later date transfer the domain fully to Cloudflare after the ICANN's 60 day restriction from when you first register the domain.</p>
         <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ"></iframe>
     </body>
