--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <h1>Oheen Rahman</h1>
         <p>Welcome to my personal webpage!</p>
         <p>This is a simple HTML page.</p>
+        <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
         <div class="badge-base LI-profile-badge" 
             data-locale="en_US" 
             data-size="medium" 
@@ -22,7 +23,6 @@
             Oheen Rahman
             </a>
         </div>
-        <script src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
 </body>
         <p>I am using Squarespace which hosts my domain and Cloudflare that handles the site's DNS requests, nameserver, proxies. I will at a later date transfer the domain fully to Cloudflare after the ICANN's 60 day restriction from when you first register the domain.</p>
         <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ"></iframe>
