--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="utf-8">
         <title>Oheen Rahman</title>
-        <link rel="stylesheet" href="style.css">
         <link rel="icon" href="favicon.jpg" type="image/jpeg">
+        <link rel="stylesheet" href="style.css">
+        <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
     </head>
     <body>
         <h1>Oheen Rahman</h1>
         <p>Welcome to my personal webpage!</p>
         <p>This is a simple HTML page.</p>
-        <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
         <div class="badge-base LI-profile-badge" 
             data-locale="en_US" 
             data-size="medium" 
@@ -18,10 +18,7 @@
             data-type="HORIZONTAL" 
             data-vanity="oheenrahman" 
             data-version="v1">
-            <a class="badge-base__link LI-simple-link" 
-            href="https://www.linkedin.com/in/oheenrahman?trk=profile-badge">
-            Oheen Rahman
-            </a>
+            <a class="badge-base__link LI-simple-link" href="https://www.linkedin.com/in/oheenrahman?trk=profile-badge">Oheen Rahman</a>
         </div>
 </body>
         <p>I am using Squarespace which hosts my domain and Cloudflare that handles the site's DNS requests, nameserver, proxies. I will at a later date transfer the domain fully to Cloudflare after the ICANN's 60 day restriction from when you first register the domain.</p>
