Update index.html with new content

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Oheen Rahman</title>
-        <link rel="icon" href="favicon.jpg" type="image/jpeg">
+        <title>Oheen Rahman | Economics and DS Student</title>
+        <link rel="icon" href="favicon.JPG" type="image/jpeg">
         <link rel="stylesheet" href="style.css">
         <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
     </head>
@@ -18,9 +18,9 @@
             data-type="HORIZONTAL" 
             data-vanity="oheenrahman" 
             data-version="v1">
-            <a class="badge-base__link LI-simple-link" href="https://www.linkedin.com/in/oheenrahman?trk=profile-badge">Oheen Rahman</a>
+            <a class="badge-base__link LI-simple-link" href="https://www.linkedin.com/in/oheenrahman?trk=profile-badge"></a>
         </div>
-        <p>I am using Squarespace which hosts my domain and Cloudflare that handles the site's DNS requests, nameserver, proxies. I will at a later date transfer the domain fully to Cloudflare after the ICANN's 60 day restriction from when you first register the domain.</p>
+        <p>I am using Squarespace which hosts my domain and Cloudflare that handles the site's DNS requests, nameserver, proxies. <br> I will at a later date transfer the domain fully to Cloudflare after the ICANN's 60 day restriction from when you first register the domain.</p>
         <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ"></iframe>
     </body>
 </html>
