Redesign personal website layout and add new sections
Revamped index.html with a structured layout including navigation, about, education, experience, certifications, leadership, skills, and contact sections. Updated style.css for a modern, mint-themed design with fixed navigation and improved section styling. Added empty projects.html and script.js files for future expansion.

--- a/index.html
+++ b/index.html
@@ -5,22 +5,82 @@
         <title>Oheen Rahman | Economics and DS Student</title>
         <link rel="icon" href="favicon.JPG" type="image/jpeg">
         <link rel="stylesheet" href="style.css">
+        <script src="script.js"></script>
         <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
     </head>
     <body>
-        <h1>Oheen Rahman</h1>
-        <p>Welcome to my personal webpage!</p>
-        <p>This is a simple HTML page.</p>
-        <div class="badge-base LI-profile-badge" 
-            data-locale="en_US" 
-            data-size="medium" 
-            data-theme="dark" 
-            data-type="HORIZONTAL" 
-            data-vanity="oheenrahman" 
-            data-version="v1">
-            <a class="badge-base__link LI-simple-link" href="https://www.linkedin.com/in/oheenrahman?trk=profile-badge"></a>
-        </div>
-        <p>I am using Squarespace which hosts my domain and Cloudflare that handles the site's DNS requests, nameserver, proxies. <br> I will at a later date transfer the domain fully to Cloudflare after the ICANN's 60 day restriction from when you first register the domain.</p>
-        <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ"></iframe>
+        <nav>
+            <ul>
+                <li><a href="#about">About</a></li>
+                <li><a href="#education">Education</a></li>
+                <li><a href="#experience">Experience</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+
+        <section id="about">
+        <h2>About Me</h2>
+        <p>Hi, I'm Oheen Rahman — a Data Science and Economics student at Rutgers University with a passion for analytics, problem-solving, and real-world impact through data. I aim to apply my skills in data analysis, economics, and technology to drive meaningful outcomes in business, policy, or research.</p>
+    </section>
+
+    <section id="education">
+        <h2>Education</h2>
+        <p><strong>Rutgers University, New Brunswick, NJ</strong><br>
+        B.S. in Data Science, B.A. in Economics — Expected May 2027</p>
+        <p><strong>Relevant Coursework (Data Science):</strong> Statistics for Research, Data in Context, Data Management, Information Visualization, Machine Learning</p>
+        <p><strong>Relevant Coursework (Economics):</strong> Intro to Macroeconomics, Intro to Microeconomics, Intermediate Macroeconomics, Intermediate Microeconomics, Financial Economics, Econometrics, Forecasting & Big Data</p>
+        <p><strong>Egg Harbor Township High School</strong> — Graduated June 2023</p>
+    </section>
+
+    <section id="experience">
+        <h2>Experience</h2>
+        <p><strong>Office Assistant – Rutgers University</strong> (Sep 2023 – Present, New Brunswick, NJ)<br>
+        Supported daily operations, managed 30+ communications/tasks, and improved filing system speed by 40%. Oversaw inventory and purchasing processes to improve efficiency.</p>
+        <p><strong>Shop from Home Clerk – Shoprite of English Creek</strong> (Jun 2021 – Sep 2021, Egg Harbor Township, NJ)<br>
+        Processed and fulfilled online orders, served 50+ customers daily, handled payments, and maintained stock and store displays.</p>
+    </section>
+
+    <section id="certifications">
+        <h2>Certifications</h2>
+        <ul>
+            <li>Google Data Analytics Professional Certificate – In Progress</li>
+            <li>IBM Data Science – Planned</li>
+            <li>SQL for Programmers – In Progress</li>
+            <li>Bloomberg Finance Fundamentals Certificate</li>
+            <li>Bloomberg Market Concepts Certificate</li>
+            <li>Bloomberg Environmental Social Governance Certificate</li>
+            <li>Bloomberg Spreadsheet Analysis Certificate</li>
+            <li>Excel Essential Training</li>
+            <li>Learning Git and GitHub</li>
+        </ul>
+    </section>
+
+    <section id="leadership">
+        <h2>Leadership</h2>
+        <p><strong>Treasurer – Bengali Student Association</strong> (May 2025 – Present, New Brunswick, NJ)<br>
+        Manage a $15,000+ annual budget, process reimbursements, and coordinate event funding.</p>
+        <p><strong>Fundraiser Chair – Bengali Student Association</strong> (Sep 2023 – May 2025)<br>
+        Organized 5+ fundraising events, built sponsor partnerships, and increased event turnout by 30%.</p>
+    </section>
+
+    <section id="skills">
+        <h2>Skills</h2>
+        <p><strong>Languages:</strong> English, Bengali, Hindi, Urdu</p>
+        <p><strong>Programming:</strong> Python, SQL, R, Git, HTML, CSS</p>
+        <p><strong>Tools:</strong> Microsoft Office, Google Workspace, GitHub, Tableau, Power BI, AWS, Azure, Oracle Cloud Infrastructure</p>
+    </section>
+
+    <section id="contact">
+        <h2>Contact</h2>
+        <p>Email: oheenrahman81@gmail.com</p>
+        <p>Website: <a href="https://oheenrahman.com" target="_blank">oheenrahman.com</a></p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/oheenrahman" target="_blank">linkedin.com/in/oheenrahman</a></p>
+        <p>GitHub: <a href="https://github.com/oheenrahman" target="_blank">github.com/oheenrahman</a></p>
+    </section>
+
+        <footer>
+            <p>&copy; 2025 Oheen Rahman. All rights reserved.</p>
+        </footer>
     </body>
 </html>
