--- a/index.html
+++ b/index.html
@@ -169,10 +169,10 @@
         <footer>
             <div class="footer-container">      
                 <div class="footer-left" id="contactContainer">
-                    <p>Email: <a href="emailto:oheenrahman81@gmail.com">oheenrahman81@gmai.com</a></p>
-                    <p>Website: <a href="https://oheenrahman.com" target="_blank">oheenrahman.com</a></p>
-                    <p>LinkedIn: <a href="https://www.linkedin.com/in/oheenrahman" target="_blank">linkedin.com/in/oheenrahman</a></p>
-                    <p>GitHub: <a href="https://github.com/oheenrahman" target="_blank">github.com/oheenrahman</a></p>
+                    <p>Email: <a href="emailto:oheenrahman81@gmail.com">oheenrahman81@gmail.com</a></p>
+                    <p>Website: <a href="https://oheenrahman.com" target="_blank">oheenrahman.com/</a></p>
+                    <p>LinkedIn: <a href="https://www.linkedin.com/in/oheenrahman" target="_blank">linkedin.com/in/oheenrahman/</a></p>
+                    <p>GitHub: <a href="https://github.com/oheenrahman" target="_blank">github.com/oheenrahman/</a></p>
                 </div>
 
                 <div class="footer-center">
