--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="utf-8">
-        <title>Oheen Rahman | Economics and DS Student</title>
+        <title>Oheen Rahman</title>
         <link rel="icon" href="images/favicon.JPG" type="image/jpeg">
         <link rel="stylesheet" href="style.css">
         <script src="script.js"></script>
