--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>Oheen Rahman</title>
-        <link rel="icon" href="images/favicon.JPG" type="image/jpeg">
+        <link rel="icon" href="images/favicon.jpg" type="image/jpeg">
         <link rel="stylesheet" href="style.css">
     </head>
 
