--- a/404.html
+++ b/404.html
@@ -1,54 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>404 Not Found</title>
-  <link rel="stylesheet" href="style.css">
-  <style>
-    body {
-      background-color: #37474F;
-      color: #fff;
-      font-family: Calibri, sans-serif;
-      text-align: center;
-      padding: 100px 20px;
-    }
+    <head>
+        <meta charset="UTF-8">
+        <meta charset="utf-8">
+        <title>404 | Page Not Found</title>
+        <link rel="icon" href="images/favicon.jpg" type="image/jpeg">
+        <link rel="stylesheet" href="style.css">
+        <style>
+            body {
+            background-color: #37474F;
+            color: #fff;
+            font-family: Calibri, sans-serif;
+            text-align: center;
+            padding: 100px 20px;
+            }
 
-    .not-found-container {
-      max-width: 600px;
-      margin: auto;
-    }
+            .not-found-container {
+            max-width: 600px;
+            margin: auto;
+            }
 
-    .not-found-title {
-      font-size: 5rem;
-      margin-bottom: 20px;
-      color: #FF6F61;
-    }
+            .not-found-title {
+            font-size: 5rem;
+            margin-bottom: 20px;
+            color: #FF6F61;
+            }
 
-    .not-found-message {
-      font-size: 1.5rem;
-      margin-bottom: 30px;
-    }
+            .not-found-message {
+            font-size: 1.5rem;
+            margin-bottom: 30px;
+            }
 
-    .home-link {
-      background-color: #2e8b6d;
-      color: #fff;
-      padding: 12px 24px;
-      border-radius: 30px;
-      text-decoration: none;
-      font-weight: bold;
-      transition: background-color 0.3s ease;
-    }
+            .home-link {
+            background-color: #000000;
+            color: #fff;
+            padding: 12px 24px;
+            border-radius: 30px;
+            text-decoration: none;
+            font-weight: bold;
+            transition: background-color 0.3s ease;
+            }
 
-    .home-link:hover {
-      background-color: #256e56;
-    }
-  </style>
-</head>
-<body>
-  <div class="not-found-container">
-    <div class="not-found-title">404</div>
-    <div class="not-found-message">Page not found. You may have mistyped the address.</div>
-    <a href="index.html" class="home-link">Back to Home</a>
-  </div>
-</body>
+            .home-link:hover {
+            background-color: #256e56;
+            }
+        </style>
+    </head>
+    <body>
+        <nav>
+            <ul>
+                <li><a href="#Home">Home</a></li>
+                <li><a href="#education">Education</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#experience">Experiences</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#leadership">Leadership</a></li>
+                <li><a href="#certifications">Certifications</a></li>
+                <li><a href="#résumé">Résumé</a></li>
+            </ul>
+        </nav>
+        <div class="not-found-container">
+            <div class="not-found-title">404</div>
+            <div class="not-found-message">Page not found. You may have mistyped the address.</div>
+            <a href="index.html" class="home-link">Back to Home</a>
+        </div>
+        <footer>
+            <div class="footer-container">      
+                <div class="footer-left" id="contactContainer">
+                    <p>Email: <a href="emailto:oheenrahman81@gmail.com">oheenrahman81@gmail.com</a></p>
+                    <p>Website: <a href="https://oheenrahman.com" target="_blank">oheenrahman.com/</a></p>
+                    <p>LinkedIn: <a href="https://www.linkedin.com/in/oheenrahman" target="_blank">linkedin.com/in/oheenrahman/</a></p>
+                    <p>GitHub: <a href="https://github.com/oheenrahman" target="_blank">github.com/oheenrahman/</a></p>
+                </div>
+
+                <div class="footer-center">
+                    <p>&copy; 2025 Oheen Rahman</p>
+                </div>
+
+                <div class="footer-right">
+                    <div class="badge-base LI-profile-badge" id="linkedInProfileBadge"
+                            data-locale="en_US"
+                            data-size="large"
+                            data-theme="dark"
+                            data-type="HORIZONTAL"
+                            data-vanity="oheenrahman"
+                            data-version="v1">
+                        <a class="badge-base__link LI-simple-link" href="https://www.linkedin.com/in/oheenrahman?trk=profile-badge"></a>
+                        <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
+                    </div>
+                </div>
+            </div>
+        </footer>
+    </body>
 </html>
