--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                 </div>
 
                 <div class="footer-center">
-                    <p>&copy; 2025 Oheen Rahman</p>
+                    <h2>&copy; 2025 Oheen Rahman</h2>
                 </div>
 
                 <div class="footer-right">
