--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
             <ul>
                 <li><a href="#Home">Home</a></li>
                 <li><a href="#education">Education</a></li>
-                <li><a href="#skills">Skills</a></li>
                 <li><a href="#experience">Experiences</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#leadership">Leadership</a></li>
                 <li><a href="#certifications">Certifications</a></li>
+                <li><a href="#skills">Skills</a></li>
                 <li><a href="#résumé">Résumé</a></li>
             </ul>
         </nav>
@@ -58,7 +58,7 @@
             </p>
         </section>
 
-        <section id="logo">
+        <section id="experience">
             <h2>Experience</h2>
             <img src="images/experience/hairalyze.png" id="hairalyze">
             <p>
@@ -80,8 +80,8 @@
         </section>
 
 
-        <section id="projects">
-            <h2>Projects</h2>
+        <section>
+            <h2 id="projects">Projects</h2>
             <div class="swiper projectsSwiper">
                 <div class="swiper-wrapper" id="projects-wrapper"></div>
                 <div class="swiper-button-prev"></div>
@@ -115,13 +115,13 @@
             </ul>
         </section>
 
-        <section id="skills">
+        <section>
             <div id="skillsChart"> 
                 <h2 style="text-align: center;">My Skills</h2>
                 <br>
 
                 <div id="skillsChartMainDIV">
-                    <div class="skillsChartContainers">
+                    <div id="skills" class="skillsChartContainers">
                         <h3>Programming Languages</h3>
                         <div class="individualSkillsTypeContainer">
                             <img src="images/programming_languages/python.webp" class="programmingLanguages" title="Python">
@@ -193,10 +193,10 @@
         <br>
         <br>
 
-        <section id="résumé">
+        <section>
           <div class="résumé-container">
             <div class="résumé-item">
-            <h3 style="text-align: center;"><b>Résumé</b></h3>
+            <h3 id="résumé" style="text-align: center;"><b>Résumé</b></h3>
                 <iframe src="https://drive.google.com/file/d/1E1X6Q59JPQZNWwSjsDcUQU1v55lVhWjeu5ovFmVIiBA/preview" class="résumé-frame"></iframe>
                 <div class="download-button">
                 <a href="https://drive.google.com/u/0/uc?id=1E1X6Q59JPQZNWwSjsDcUQU1v55lVhWjeu5ovFmVIiBA&export=download" target="_blank" class="black-button">Download Résumé</a>
